infrastructure/kubernetes/monitoring/alertmanager/service.yml
apiVersion: v1
kind: Service

metadata:
  name: alertmanager
  namespace: monitoring

  labels:
    app.kubernetes.io/name: alertmanager
    app.kubernetes.io/instance: flashstore
    app.kubernetes.io/version: "0.28.1"
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/part-of: flashstore
    app.kubernetes.io/managed-by: kubectl

  annotations:
    description: "Alertmanager Service"
    prometheus.io/scrape: "true"
    prometheus.io/port: "9093"

spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: alertmanager
    app.kubernetes.io/instance: flashstore

  ports:
    - name: http
      port: 9093
      targetPort: http
      protocol: TCP
